# pystargram

./: .gitignore  README.md  asd.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
member/: forms.py  models.py  oauth_urls.py  oauth_views.py  urls.py  views.py
member/migrations/: 0001_initial.py  0002_userfollowing_user_following.py  0003_alter_userfollowing_unique_together.py
post/: admin.py  comment_urls.py  comment_views.py  forms.py  models.py  views.py
post/migrations/: 0001_initial.py  0002_alter_postimage_post_comment_tag.py  0003_alter_tag_tag.py  0004_like.py
post/templatetags/: like.py
static/css/: style.css
templates/: base.html
templates/auth/: email_verified_done.html  login.html  nickname.html  not_verified.html  signup.html  signup_done.html
templates/include/: form.html  search_form.html
templates/post/: form.html  list.html
templates/profile/: detail.html
templates/search/: search.html  search_tag.html  search_user.html
util/: email.py  forms.py  models.py
